# astron-121

./: README.md
01/: 01.ipynb  AGENTS.md  README.md  pyproject.toml
01/configs/experiments/: README.md
01/configs/instruments/: README.md
01/data/interim/e1/: qc_catalog.csv  run_catalog.csv
01/data/interim/e2/: bandpass_curves.csv  qc_catalog.csv  (+1 more)
01/docs/decisions/: README.md
01/docs/methods/: README.md  execution_sheet.md
01/docs/requirements/: allmixers_traceability.md
01/report/: checklist.md
01/scripts/acquire/: README.md  manual_capture_common.py  run_e1_acquire.py  run_e2_acquire.py  run_e3_acquire.py  run_e4_acquire.py  run_e5_acquire.py  run_e6_acquire.py  run_e7_acquire.py
01/scripts/analyze/: README.md  run_e2_pipeline.py  run_e3_pipeline.py
01/scripts/organize/: README.md
01/scripts/plot/: README.md
01/scripts/sim/: README.md
01/src/ugradio_lab1/: __init__.py
01/tests/: conftest.py
01/tests/fixtures/: README.md
01/tests/hardware/: README.md
01/tests/integration/: README.md
01/tests/unit/: test_axes_plots.py  test_bandpass_analysis.py  test_control_acquisition.py  test_control_e4_planning.py  test_control_sdr.py  test_control_siggen.py  test_dataio_catalog.py  test_figure_builders.py  test_leakage_analysis.py  test_mixers_analysis.py  test_noise_analysis.py  test_nyquist_analysis.py  test_pipeline_e1.py  test_pipeline_e2.py  test_pipeline_e3.py  test_pipeline_e5.py  test_plot_style.py  test_resolution_analysis.py  test_sim_mixers.py  test_sim_noise.py  test_sim_nyquist.py  test_unified_catalog.py  test_validation_utils.py
(+204 files in other folders)
